<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:background="@android:color/holo_blue_dark">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:gravity="center_horizontal"
            android:text="@string/FirstTeam"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:textStyle="italic|bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_dark"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="30dp"
                    android:paddingBottom="10dp"
                    android:text="@string/score"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="3sp">

                    <TextView
                        android:background="@android:color/holo_blue_bright"
                        android:id="@+id/team_one_score"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/defaultScore"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                    <TextView
                        android:background="@android:color/holo_red_light"
                        android:id="@+id/team_one_wicket"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/defaultScore"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:background="@android:color/holo_blue_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="5dp"
                    android:orientation="horizontal">

                    <Button
                        style="?android:attr/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="addOneToTeamOne"
                        android:text="@string/addScore1" />

                    <Button
                        style="?android:attr/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="addTwoToTeamOne"
                        android:text="@string/addScore2" />

                    <Button
                        style="?android:attr/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="addThreeToTeamOne"
                        android:text="@string/addScore3" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        style="?android:attr/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="addFourToTeamOne"
                        android:text="@string/addScore4" />

                    <Button
                        style="?android:attr/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="addSixToTeamOne"
                        android:text="@string/addScore6" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        style="?android:attr/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="addWideBallRunToTeamOne"
                        android:text="@string/addScoreWide" />

                    <Button
                        style="?android:attr/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="addNoBallRunToTeamOne"
                        android:text="@string/addScoreNoBall" />

                    <Button
                        android:textColor="@android:color/holo_red_light"
                        style="?android:attr/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="addTeamOneWicket"
                        android:text="@string/outButton" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="?android:attr/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                style="?android:attr/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:onClick="setTargetForTeamTwo"
                android:text="@string/endFirstInning" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/holo_blue_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:gravity="center_horizontal"
                android:text="@string/SecondTeam"
                android:textAllCaps="true"
                android:textSize="30sp"
                android:textStyle="italic|bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="cursive"
                    android:padding="10dp"
                    android:text="@string/targetString"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/targetScoreDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@android:color/holo_orange_light"
                    android:fontFamily="cursive"
                    android:padding="10dp"
                    android:text="@string/defaultScore"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="30dp"
                        android:paddingTop="20dp"
                        android:paddingEnd="30dp"
                        android:paddingBottom="10dp"
                        android:text="@string/score"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="3sp">

                        <TextView
                            android:background="@android:color/holo_blue_bright"
                            android:id="@+id/team_two_score"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/defaultScore"
                            android:textSize="50sp"
                            android:textStyle="bold" />

                        <TextView
                            android:background="@android:color/holo_red_light"
                            android:id="@+id/team_two_wicket"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/defaultWicket"
                            android:textSize="50sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:background="@android:color/holo_blue_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="5dp"
                        android:orientation="horizontal">

                        <Button
                            style="?android:attr/button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="addOneToTeamTwo"
                            android:text="@string/addScore1" />

                        <Button
                            style="?android:attr/button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="addTwoToTeamTwo"
                            android:text="@string/addScore2" />

                        <Button
                            style="?android:attr/button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="addThreeToTeamTwo"
                            android:text="@string/addScore3" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <Button
                            style="?android:attr/button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="addFourToTeamTwo"
                            android:text="@string/addScore4" />

                        <Button
                            style="?android:attr/button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="addSixToTeamTwo"
                            android:text="@string/addScore6" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <Button
                            style="?android:attr/button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="addWideBallRunToTeamTwo"
                            android:text="@string/addScoreWide" />

                        <Button
                            style="?android:attr/button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="addNoBallRunToTeamTwo"
                            android:text="@string/addScoreNoBall" />

                        <Button
                            android:textColor="@android:color/holo_red_light"
                            style="?android:attr/button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="addTeamTwoWicket"
                            android:text="@string/outButton" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:onClick="declareResult"
                    android:text="@string/endGameButton" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/winnerTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:fontFamily="monospace"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/winnerMsg"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/winnerTextView"
                android:onClick="resetScore"
                android:text="@string/resetButton" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>